Add date so as to verify that the sign in application works

--- a/SignInApp/templates/dashboard.html
+++ b/SignInApp/templates/dashboard.html
@@ -38,6 +38,7 @@
 				<p class="attendance-stat">Name: {{firstName}} {{lastName}} </p>
 				<p class="attendance-stat">General Meetings Attended: {{attendance}}</p>
 				<p class="attendance-stat">Dues Paid: ${{dues}}</p>
+				<p class="attendance-stat">Today's Date: {{date}}</p>
 			</div>
 		{% endif %}
 
