Add more fields to database, update how it pulls information from the Google Sheet

--- a/SignInApp/templates/dashboard.html
+++ b/SignInApp/templates/dashboard.html
@@ -52,6 +52,7 @@
 				<input class="info-input" type="text" name="first-name" placeholder="First Name"><br>
 				<input class="info-input" type="text" name="last-name" placeholder = "Last Name"><br>
 				<input class="info-input" type="text" name="email" placeholder = "Email"><br>
+				<input class="info-input" type="text" name="year" placeholder="Year"><br>
 				<input class="eid-submit" type="submit" name="enter-info" value="Submit Info">
 			</form>
 		{% endif %}
