--- a/SignInApp/templates/dashboard.html
+++ b/SignInApp/templates/dashboard.html
@@ -21,7 +21,7 @@
 
 		{% if allowedIn %}
 			<div class="attendance-result">
-				<p>Thanks for checking in! Please take a seat inside!</p>
+				<p>Thanks for checking in! Please show your phone to a USIT representative before heading inside.</p>
 				<a href="/">Return to Sign-In</a>
 			</div>
 		{% endif %}
