--- a/SignInApp/templates/dashboard.html
+++ b/SignInApp/templates/dashboard.html
@@ -24,15 +24,15 @@
 			<div class="attendance-result">
 				<p>Thanks for checking in! Please show your phone to a USIT representative before heading inside.</p>
 				<a href="/">Return to Sign-In</a>
-				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=15.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; padding-top: 15px; padding-bottom: 15px;">
+				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=15.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
 					<img src="http://brand.venmo.com/img/logo-mark.png" style="height: 35px; box-shadow: none;">
 					<p style="font-size: 25px; padding-left: 10px; color: white;">Buy Bundle</p>
 				</a>
-				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=12.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; padding-top: 15px; padding-bottom: 15px;">
+				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=12.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
 					<img src="http://brand.venmo.com/img/logo-mark.png" style="height: 35px; box-shadow: none;">
 					<p style="font-size: 25px; padding-left: 10px; color: white;">Buy T-Shirt</p>
 				</a>
-				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=6.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; padding-top: 15px; padding-bottom: 15px;">
+				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=6.00¬e=Texas%20Charity%20Pitch%20Deposit _blank" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
 					<img src="http://brand.venmo.com/img/logo-mark.png" style="height: 35px; box-shadow: none;">
 					<p style="font-size: 25px; padding-left: 10px; color: white;">Buy Tumbler</p>
 				</a>
