--- a/SignInApp/templates/dashboard.html
+++ b/SignInApp/templates/dashboard.html
@@ -24,7 +24,7 @@
 			<div class="attendance-result">
 				<p>Thanks for checking in! Please show your phone to a USIT representative before heading inside.</p>
 				<a href="/">Return to Sign-In</a>
-				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=15.00&note=TCP%20Bundle" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
+				<!-- <a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=15.00&note=TCP%20Bundle" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
 					<img src="http://brand.venmo.com/img/logo-mark.png" style="height: 35px; box-shadow: none;">
 					<p style="font-size: 25px; padding-left: 10px; color: white;">Buy Bundle</p>
 				</a>
@@ -35,7 +35,7 @@
 				<a href="https://venmo.com/?txn=pay&audience=private&recipients=TexasUSIT&amount=6.00&note=TCP%20Tumbler" class="button" style="display: flex; justify-content: center; align-items: center; border: 1px solid; background-color: #4897CF; border-color: #4897CF; height: 42px; width: 350px; margin: 0 auto; box-shadow: none; margin-top: 8px; margin-bottom: 8px;">
 					<img src="http://brand.venmo.com/img/logo-mark.png" style="height: 35px; box-shadow: none;">
 					<p style="font-size: 25px; padding-left: 10px; color: white;">Buy Tumbler</p>
-				</a>
+				</a> -->
 			</div>
 		{% endif %}
 
